crates/sizeof/negative_tests/notgeneric.stderr
error[E0599]: the method `dynamic_size` exists for struct `Vec<NotSizeOf>`, but its trait bounds were not satisfied
 --> negative_tests/notgeneric.rs:9:5
  |
2 | struct NotSizeOf {
  | ---------------- doesn't satisfy `NotSizeOf: SizeOf`
...
9 |     b: Vec<NotSizeOf>,
  |     ^ method cannot be called on `Vec<NotSizeOf>` due to unsatisfied trait bounds
  |
 ::: $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  | ------------------------------------------------------------------------------------------------ doesn't satisfy `Vec<NotSizeOf>: SizeOf`
  |
  = note: the following trait bounds were not satisfied:
          `NotSizeOf: SizeOf`
          which is required by `Vec<NotSizeOf>: SizeOf`
note: the trait `SizeOf` must be implemented
 --> sizeof_internal/src/lib.rs
  |
  | pub trait SizeOf {
  | ^^^^^^^^^^^^^^^^
